--- a/client/src/app/admin/admin-create-product/admin-create-product.component.html
+++ b/client/src/app/admin/admin-create-product/admin-create-product.component.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="publish-btn">
-          <button type="submit" [disabled]="productForm.invalid">Publish</button> <!-- disabled if form is not valid -->
+          <button type="submit">Publish</button> <!-- disabled if form is not valid -->
         </div>
       </form>
     </div>
