--- a/client/src/app/admin/admin-create-product/create-product-images/create-product-images.component.html
+++ b/client/src/app/admin/admin-create-product/create-product-images/create-product-images.component.html
@@ -11,7 +11,7 @@
   </div>
   <div class="add-image" (click)="triggerFileInput()">
     <!-- File input to allow the user to select an image -->
-    <input type="file" #fileInput (change)="onFileSelected($event)" style="display: none;">
+    <input type="file" #fileInput (change)="onFileSelected($event)" style="display: none;" accept="image/*">
     <i class="fa fa-plus"></i>  <!-- Icon/button for adding images -->
   </div>
 </div>
