--- a/client/src/app/admin/admin-products/admin-products.component.html
+++ b/client/src/app/admin/admin-products/admin-products.component.html
@@ -33,9 +33,9 @@
           <td>{{ product.category }}</td>
           <td>{{ product.price | currency:'USD' }}</td> 
 
-          <td>{{ product.stock || 'N/A' }}</td>
-          <td>{{ product.status || 'offline' }}</td>
-          <td>{{ product.creationDate | date:'shortDate' || 'N/A' }}</td>
+          <td>Stock</td>
+          <td>Status</td>
+          <td>Date</td>
           
           <td>
             <button class="actions-see">
