--- a/client/src/app/layout/admin-aside/admin-aside.component.html
+++ b/client/src/app/layout/admin-aside/admin-aside.component.html
@@ -8,31 +8,31 @@
     <ul>
       <li>
         <i class="fa fa-dashboard"></i>
-        <span><a href="Home">Dashboard</a></span>
+        <span><a routerLink="/admin">Dashboard</a></span>
       </li>
       <li>
         <i class="fa fa-box"></i>
-        <span><a href="Products">Products</a></span>
+        <span><a routerLink="/admin/products" href="Products">Products</a></span>
       </li>
       <li>
         <i class="fa fa-users"></i>
-        <span><a href="Cart">Users</a></span>
+        <span><a routerLink="/admin/users">Users</a></span>
       </li>
       <li>
         <i class="fa fa-truck"></i>
-        <span><a href="My orders">Orders</a></span>
+        <span><a routerLink="/admin/orders">Orders</a></span>
       </li>
       <li>
         <i class="fa fa-usd"></i>
-        <span><a href="My Wishlist">Sales</a></span>
+        <span><a routerLink="/admin/sales">Sales</a></span>
       </li>
       <li>
         <i class="fa fa-bell"></i>
-        <span><a href="Notifications">Notifications</a></span>
+        <span><a routerLink="/admin/notifications" href="Notifications">Notifications</a></span>
       </li>
       <li>
         <i class="fa fa-arrow-left"></i>
-        <span><a href="Go Back Home">Go Back Home</a></span>
+        <span><a routerLink="/">Go Back Home</a></span>
       </li>
     </ul>
   </nav>
