adding delete product endpoint to the server

--- a/client/src/app/admin/admin-products/admin-products.component.css
+++ b/client/src/app/admin/admin-products/admin-products.component.css
@@ -28,7 +28,7 @@ main table {
     background-color: #45a049; 
   }
   
-  main table .actions-see {
+  /* main table .actions-see {
     background: #007bff;
    
   }
@@ -43,4 +43,4 @@ main table {
   
   main table .actions-edit {
     background: #0CC21A;
-  }
+  } */ 
