--- a/client/src/app/admin/admin-products/admin-products.component.html
+++ b/client/src/app/admin/admin-products/admin-products.component.html
@@ -38,15 +38,17 @@
           <td>Date</td>
           
           <td>
-            <button class="actions-see">
-              <i class="fa fa-eye"></i>
-            </button>
+            <!-- View Product button -->
+            <app-view-product-button [productId]="product.id"></app-view-product-button>
+            <!-- Edit product button-->
             <button class="actions-edit">
               <i class="fa fa-edit"></i>
             </button>
+            <!-- Feature Product Button -->
             <button class="actions-feature">
               <i class="fa fa-star"></i>
             </button>
+            <!-- Delete Product Button -->
             <button class="actions-delete">
               <i class="fa fa-trash"></i>
             </button>
