saving changes of the day, Tomorrow i will finish the product admin page, fix some bugs and issues, and i will start working on the sales, products and orders page.

--- a/client/src/app/admin/admin-products/admin-products.component.html
+++ b/client/src/app/admin/admin-products/admin-products.component.html
@@ -49,9 +49,7 @@
               <i class="fa fa-star"></i>
             </button>
             <!-- Delete Product Button -->
-            <button class="actions-delete">
-              <i class="fa fa-trash"></i>
-            </button>
+            <app-delete-product-button [productId]="product.id"></app-delete-product-button>
           </td>
         </tr>
       </tbody>
