--- a/client/src/app/admin/admin-products/delete-product-button/delete-product-button.component.css
+++ b/client/src/app/admin/admin-products/delete-product-button/delete-product-button.component.css
@@ -1,3 +1,10 @@
-.actions-delete {
+
+
+  button {
+    cursor: pointer;
+    padding: 5px;
+    border: none;
+    color: white;
+    border-radius: 5px;
     background: #d9534f;
   }
