--- a/client/src/app/admin/admin-products/edit-product-button/edit-product-button.component.css
+++ b/client/src/app/admin/admin-products/edit-product-button/edit-product-button.component.css
@@ -1,3 +1,10 @@
-.actions-edit {
+
+
+  button {
+    cursor: pointer;
+    padding: 5px;
+    border: none;
+    color: white;
+    border-radius: 5px;
     background: #0CC21A;
-  } 
+  }
