--- a/client/src/app/admin/admin-products/feature-product-button/feature-product-button.component.css
+++ b/client/src/app/admin/admin-products/feature-product-button/feature-product-button.component.css
@@ -1,3 +1,10 @@
-.actions-feature {
+
+
+  button {
+    cursor: pointer;
+    padding: 5px;
+    border: none;
+    color: white;
+    border-radius: 5px;
     background: #f0ad4e;
   }
