--- a/client/src/app/admin/admin-products/view-product-button/view-product-button.component.css
+++ b/client/src/app/admin/admin-products/view-product-button/view-product-button.component.css
@@ -1,3 +1,11 @@
-.actions-see {
+
+
+button {
+    cursor: pointer;
+    padding: 5px;
+    border: none;
+    color: white;
+    border-radius: 5px;
     background: #007bff;
-}
+  }
+
