--- a/client/src/app/admin/admin-products/feature-product-button/feature-product-button.component.html
+++ b/client/src/app/admin/admin-products/feature-product-button/feature-product-button.component.html
@@ -1,3 +1,3 @@
-<button class="actions-feature">
+<button (click)="featureProduct" class="actions-feature">
     <i class="fa fa-star"></i>
-  </button>
+</button>
