NOW should be ok

--- a/client/src/app/admin/admin-product-form/admin-product-form.component.html
+++ b/client/src/app/admin/admin-product-form/admin-product-form.component.html
@@ -5,7 +5,7 @@
 
   <div class="wrapper">
     <div class="create-product-form">
-      <form [formGroup]="productForm" (ngSubmit)="createProduct()">
+      <form [formGroup]="productForm" (ngSubmit)="submitProduct()">
         <div class="inp">
           <label for="Title">Title</label>
           <input type="text" formControlName="title" placeholder="Title">
