client-side code refactored and better documented.

--- a/client/src/app/admin/admin-products/admin-products.component.html
+++ b/client/src/app/admin/admin-products/admin-products.component.html
@@ -44,10 +44,10 @@
             </app-view-product-button>
             
             <!-- Edit product button-->
-            <button class="actions-edit">
-              <i class="fa fa-edit"></i>
-            </button>
-            
+            <app-edit-product-button [productId]="product.id">
+
+            </app-edit-product-button>
+      
             <!-- Feature Product Button -->
             <app-feature-product-button [productId]="product.id">
                 
