--- a/client/src/app/admin/admin-products/edit-product-button/edit-product-button.component.html
+++ b/client/src/app/admin/admin-products/edit-product-button/edit-product-button.component.html
@@ -1,3 +1,3 @@
-<button class="actions-edit">
-    <i class="fa fa-edit"></i>
-  </button>
+<button class="actions-edit" [routerLink]="['/admin/editProduct/', productId]">
+  <i class="fa fa-edit"></i>
+</button>
