--- a/client/src/app/admin/create-product/create-product.component.html
+++ b/client/src/app/admin/create-product/create-product.component.html
@@ -1,3 +1,3 @@
 <app-admin-product-form>
-    <!-- This will Create a product -->
+    <!-- This will Create a product, no prop 'productId' is passed. -->
 </app-admin-product-form>
