--- a/client/src/app/admin/edit-product/edit-product.component.html
+++ b/client/src/app/admin/edit-product/edit-product.component.html
@@ -1,3 +1,3 @@
 <app-admin-product-form [productId]="productId">
-    <!-- This will edit a product -->
+    <!-- This will edit a product, productId prop is passed. -->
 </app-admin-product-form>
