--- a/client/src/app/admin/admin-products/admin-products.component.html
+++ b/client/src/app/admin/admin-products/admin-products.component.html
@@ -54,10 +54,15 @@
             </app-feature-product-button>
             
             <!-- Delete Product Button -->
-            <app-delete-product-button [productId]="product.id">
-                
+            <app-delete-product-button
+            [productId]="product.id"
+            (productDeleted)="onProductDeleted($event)">
             </app-delete-product-button>
             
+            
+            
+                
+            </app-delete-product-button>
           </td>
         </tr>
       </tbody>
