--- a/client/src/app/auth/login/login.component.html
+++ b/client/src/app/auth/login/login.component.html
@@ -1,1 +1,46 @@
-<p>login works!</p>
+<div class="login-form">
+  <div class="lf-logo">
+    <h1>Jagarv</h1>
+  </div>
+  <div>
+    <h2>¡Welcome Back!</h2>
+  </div>
+
+  <div class="form">
+    <form>
+       <div class="inps">
+          <div class="inp">
+            <input type="email" placeholder="Your Email" required>
+          </div>
+          <div class="inp">
+             <input type="password" placeholder="Your Password" required>
+          </div>
+          <div class="remember-me">
+            <input type="checkbox" id="keep-logged" name="keep-logged">
+            <label for="keep-logged">Keep me logged in</label>
+          </div>
+          <div class="btn">
+            <button type="submit">Continue</button>
+          </div>
+       </div>
+    </form>
+    <div class="links">
+      <a href="#" class="forgot-password">I Forgot Password</a>
+      <a href="#" class="create-account">Create Account</a>
+    </div>
+    <div class="or">
+      <p>OR</p>
+    </div>
+    <div class="social-logins">
+      <div class="social-login-google">
+        <button>Continue With Google</button>
+      </div>
+      <div class="social-login-twitter">
+         <button>Continue With Twitter</button>
+      </div>
+      <div class="social-login-github">
+        <button>Continue With GitHub</button>
+      </div>
+    </div>
+  </div>
+</div>
