--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -1,1 +1,44 @@
-<p>register works!</p>
+<div class="register-form">
+  <div class="rf-logo">
+    <h1>Jagarv</h1>
+  </div>
+  <div>
+    <h2>¡Welcome To Jagarv!</h2>
+  </div>
+
+  <div class="form">
+    <form>
+       <div class="inps">
+         <div class="inp">
+           <input type="text" placeholder="Your Name">
+         </div>
+          <div class="inp">
+            <input type="email" placeholder="Your Email" required>
+          </div>
+          <div class="inp">
+             <input type="password" placeholder="Your Password" required>
+          </div>
+          <div class="btn">
+            <button type="submit">Continue</button>
+          </div>
+       </div>
+    </form>
+    <div class="links">
+      <a href="#" class="have-account">I Already Have A Account</a>
+    </div>
+    <div class="or">
+      <p>OR</p>
+    </div>
+    <div class="social-logins">
+      <div class="social-login-google">
+        <button>Continue With Google</button>
+      </div>
+      <div class="social-login-twitter">
+         <button>Continue With Twitter</button>
+      </div>
+      <div class="social-login-github">
+        <button>Continue With GitHub</button>
+      </div>
+    </div>
+  </div>
+</div>
