--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -6,40 +6,39 @@
     <h2>¡Welcome To Jagarv!</h2>
   </div>
 
-  <div class="form">
+  <div class="form" *ngIf="registerForm">
     <form [formGroup]="registerForm">
       <div class="inps">
         <!-- Username Input -->
         <div class="inp">
           <input type="text" formControlName="username" placeholder="Your Name">
-          <div *ngIf="registerForm.get('username').invalid && registerForm.get('username').touched">
-            <small *ngIf="registerForm.get('username').errors?.required">Password Is Required</small>
+          <div *ngIf="registerForm.get('username')?.invalid && registerForm.get('username')?.touched">
+            <small *ngIf="registerForm.get('username')?.errors?.required">Password Is Required</small>
           </div>
         </div>
 
         <!-- Email Input -->
         <div class="inp">
           <input type="email" formControlName="email" placeholder="Your Email" required>
-          <div *ngIf="registerForm.get('email').invalid && registerForm.get('email').touched">
-            <small *ngIf="registerForm.get('email').errors?.required">Email Is Required.</small>
-            <small *ngIf="registerForm.get('email').errors?.email">The Email Is Not Valid.</small>
+          <div *ngIf="registerForm.get('email')?.invalid && registerForm.get('email')?.touched">
+            <small *ngIf="registerForm.get('email')?.errors?.required">Email Is Required.</small>
+            <small *ngIf="registerForm.get('email')?.errors?.email">The Email Is Not Valid.</small>
           </div>
         </div>
 
         <!-- Password Input -->
         <div class="inp">
           <input type="password" formControlName="password" placeholder="Your Password" required>
-          <div *ngIf="registerForm.get('password').invalid && registerForm.get('password').touched">
-            <small *ngIf="registerForm.get('password').errors?.required">Password Is Required.</small>
-            <small *ngIf="registerForm.get('password').errors?.minlength">Password should have 8 chars at least.</small>
-            <small *ngIf="registerForm.get('password').errors?.weakPassword">Password Should Have At Least One Letter And Number.</small>
+          <div *ngIf="registerForm.get('password')?.invalid && registerForm.get('password')?.touched">
+            <small *ngIf="registerForm.get('password')?.errors?.required">Password Is Required.</small>
+            <small *ngIf="registerForm.get('password')?.errors?.minlength">Password should have 8 chars at least.</small>
+            <small *ngIf="registerForm.get('password')?.errors?.weakPassword">Password Should Have At Least One Letter And Number.</small>
           </div>
         </div>
 
         <!-- Submit Button -->
         <div class="btn">
-           <app-submit-register-button 
-           [form]="registerForm">
+           <app-submit-register-button [form]="registerForm">
            </app-submit-register-button>
         </div>
       </div>
