fullstack google auth system semi-implemented

--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -53,7 +53,9 @@
     </div>
     <div class="social-logins">
       <div class="social-login-google">
-        <button>Continue With Google</button>
+        <app-google-auth-button>
+          
+        </app-google-auth-button>
       </div>
       <div class="social-login-twitter">
         <button>Continue With Twitter</button>
