--- a/client/src/app/auth/google-auth-button/google-auth-button.component.html
+++ b/client/src/app/auth/google-auth-button/google-auth-button.component.html
@@ -1,2 +1,6 @@
-
-<button (click)="loginWithGoogle()">Iniciar sesión con Google</button>
+<asl-google-signin-button 
+    (click)="loginWithGoogle()"
+    [style.width]="'200px'" 
+    [style.height]="'50px'"
+    [style.border-radius]="'5px'">
+</asl-google-signin-button>
