--- a/client/src/app/auth/google-auth-button/google-auth-button.component.html
+++ b/client/src/app/auth/google-auth-button/google-auth-button.component.html
@@ -1,6 +1,2 @@
-<asl-google-signin-button 
-    (click)="loginWithGoogle()"
-    [style.width]="'200px'" 
-    [style.height]="'50px'"
-    [style.border-radius]="'5px'">
-</asl-google-signin-button>
+
+<button (click)="loginWithGoogle()">Google</button>
