--- a/client/src/app/auth/google-auth-button/google-auth-button.component.html
+++ b/client/src/app/auth/google-auth-button/google-auth-button.component.html
@@ -1,2 +1,4 @@
 
-<button (click)="loginWithGoogle()">Google</button>
+<asl-google-signin-button>
+    <button (click)="loginWithGoogle()">Google</button>
+</asl-google-signin-button>
