Implementing reset password frontend

--- a/client/src/app/auth/reset-password/reset-password.component.html
+++ b/client/src/app/auth/reset-password/reset-password.component.html
@@ -1,1 +1,11 @@
-<p>reset-password works!</p>
+
+  <div class="container">
+    <form class="form">
+      <h2>Set Your New Password</h2>
+      <label>New Password</label>
+      <input type="password" name="newPassword" placeholder="Your New Password" required>
+      <label>Confirm Password</label>
+      <input type="password" placeholder="Confirm Your Password" required>
+      <button type="submit">Save</button>
+    </form>
+  </div>
