--- a/client/src/app/auth/send-reset-password/send-reset-password.component.css
+++ b/client/src/app/auth/send-reset-password/send-reset-password.component.css
@@ -1,5 +1,4 @@
 
-
 body {
   display: flex;
   justify-content: center;
@@ -27,6 +26,13 @@ body {
   font-weight: 600;
   font-size: 24px;
   color: #333;
+  text-align: center;
+}
+
+.form p {
+  margin-bottom: 20px;
+  font-size: 14px;
+  color: #666;
   text-align: center;
 }
 
