Full stack reset password Implemented.

--- a/client/src/app/auth/reset-password/reset-password.component.html
+++ b/client/src/app/auth/reset-password/reset-password.component.html
@@ -6,6 +6,10 @@
       <input type="password" name="newPassword" placeholder="Your New Password" required>
       <label>Confirm Password</label>
       <input type="password" placeholder="Confirm Your Password" required>
-      <button type="submit">Save</button>
+      <!-- submit button -->
+      <app-reset-password-button
+      [form]="resetPasswordForm"
+      >
+      </app-reset-password-button>
     </form>
   </div>
