--- a/client/src/app/auth/send-reset-password/send-reset-password.component.html
+++ b/client/src/app/auth/send-reset-password/send-reset-password.component.html
@@ -5,6 +5,10 @@
       <p>Enter your email to receive Instructions</p>
       <label>Email</label>
       <input type="email" placeholder="Enter Your Email" required>
-      <button type="submit">Send</button>
+      <!-- submit button -->
+      <app-send-reset-password-button
+      [form]="sendResetPasswordForm"
+      >
+      </app-send-reset-password-button>
     </form>
   </div>
