--- a/client/src/app/auth/send-reset-password/send-reset-password-button/send-reset-password-button.component.html
+++ b/client/src/app/auth/send-reset-password/send-reset-password-button/send-reset-password-button.component.html
@@ -1,1 +1,1 @@
-<button type="submit" (click)="sendResetPasswordEmail">Send</button>
+<button type="submit" (click)="sendResetPasswordEmail()">Send</button>
