--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,18 @@
+<div class="app-container">
+  <!-- Estos componentes ahora están a nivel global -->
+  <app-loading-component *ngIf="loading$ | async" class="loading-spinner">
+  </app-loading-component>
+  
+  <app-error-component *ngIf="error$ | async as errorMessage" 
+         [message]="errorMessage" 
+         class="error-message" 
+  ></app-error-component>
+                       
+  <app-success-component *ngIf="success$ | async as successMessage" 
+          [message]="successMessage" 
+          class="success-message" 
+  ></app-success-component>
 
-<router-outlet></router-outlet>
+ 
+  <router-outlet></router-outlet>
+</div>
