--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -14,5 +14,5 @@
   ></app-success-component>
 
  
-  <router-outlet></router-outlet>
+  <router-outlet (activate)="onActivate($event)"></router-outlet>
 </div>
