--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -57,12 +57,12 @@
           
         </app-google-auth-button>
       </div>
-      <div class="social-login-twitter">
+    <!--   <div class="social-login-twitter">
         <button>Continue With Twitter</button>
       </div>
       <div class="social-login-github">
         <button>Continue With GitHub</button>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
