--- a/client/src/app/auth/send-reset-password/send-reset-password.component.css
+++ b/client/src/app/auth/send-reset-password/send-reset-password.component.css
@@ -1,14 +1,17 @@
-
 body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100vh; 
   font-family: Arial, sans-serif;
   background: #f0f0f5;
+  margin: 0; 
 }
 
 .container {
+  display: flex; 
+  justify-content: center;
+  align-items: center; 
   width: 100%;
   max-width: 400px;
   padding: 20px;
