reset password ok

--- a/client/src/app/auth/send-reset-password/send-reset-password.component.html
+++ b/client/src/app/auth/send-reset-password/send-reset-password.component.html
@@ -4,7 +4,7 @@
       <h2>Reset Your Password</h2>
       <p>Enter your email to receive Instructions</p>
       <label>Email</label>
-      <input type="email" placeholder="Enter Your Email" required>
+      <input type="email" [(ngModel)]="sendResetPasswordForm.email" placeholder="Enter Your Email" required>
       <!-- submit button -->
       <app-send-reset-password-button
       [form]="sendResetPasswordForm"
