--- a/client/src/app/auth/send-reset-password/send-reset-password.component.html
+++ b/client/src/app/auth/send-reset-password/send-reset-password.component.html
@@ -1,14 +1,11 @@
-
-  <div class="container">
-    <form class="form">
-      <h2>Reset Your Password</h2>
-      <p>Enter your email to receive Instructions</p>
-      <label>Email</label>
-      <input type="email" [(ngModel)]="sendResetPasswordForm.email" placeholder="Enter Your Email" required>
-      <!-- submit button -->
-      <app-send-reset-password-button
-      [form]="sendResetPasswordForm"
-      >
-      </app-send-reset-password-button>
-    </form>
-  </div>
+<div class="container">
+  <form [formGroup]="sendResetPasswordForm" class="form">
+    <h2>Reset Your Password</h2>
+    <p>Enter your email to receive Instructions</p>
+    <label>Email</label>
+    <input type="email" formControlName="email" placeholder="Enter Your Email" required> 
+    <app-send-reset-password-button
+      [form]="sendResetPasswordForm">
+    </app-send-reset-password-button>
+  </form>
+</div>
