--- a/client/src/app/auth/reset-password/reset-password-button/reset-password-button.component.html
+++ b/client/src/app/auth/reset-password/reset-password-button/reset-password-button.component.html
@@ -1,1 +1,1 @@
-<button type="submit" (click)="sendResetPassword">Reset Password</button>
+<button type="submit" (click)="sendResetPassword()">Reset Password</button>
