--- a/client/src/app/auth/reset-password/reset-password.component.html
+++ b/client/src/app/auth/reset-password/reset-password.component.html
@@ -1,15 +1,14 @@
-
-  <div class="container">
-    <form class="form">
-      <h2>Set Your New Password</h2>
-      <label>New Password</label>
-      <input type="password" name="newPassword" placeholder="Your New Password" required>
-      <label>Confirm Password</label>
-      <input type="password" placeholder="Confirm Your Password" required>
-      <!-- submit button -->
-      <app-reset-password-button
-      [form]="resetPasswordForm"
-      >
-      </app-reset-password-button>
-    </form>
-  </div>
+<div class="container">
+  <form [formGroup]="resetPasswordForm" class="form">
+    <h2>Set Your New Password</h2>
+    
+    <label>New Password</label>
+    <input type="password" formControlName="newPassword" placeholder="Your New Password" required>
+    
+    <label>Confirm Password</label>
+    <input type="password" formControlName="confirmPassword" placeholder="Confirm Your Password" required>
+    
+    <!-- submit button -->
+    <app-reset-password-button [form]="resetPasswordForm"></app-reset-password-button>
+  </form>
+</div>
