if this does not work, im migrating the proyect to COBOL with NEXT :p

--- a/client/src/app/auth/reset-password/reset-password.component.html
+++ b/client/src/app/auth/reset-password/reset-password.component.html
@@ -3,10 +3,10 @@
     <h2>Set Your New Password</h2>
     
     <label>New Password</label>
-    <input type="password" formControlName="newPassword" placeholder="Your New Password" required>
+    <input type="password" formControlName="password" placeholder="Your New Password" required>
     
     <label>Confirm Password</label>
-    <input type="password" formControlName="confirmPassword" placeholder="Confirm Your Password" required>
+    <input type="password" formControlName="resetPassword" placeholder="Confirm Your Password" required>
     
     <!-- submit button -->
     <app-reset-password-button [form]="resetPasswordForm"></app-reset-password-button>
